--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/finance-tracker
+MONGO_URI=mongodb+srv://palayush930592:Ayudhi@perfintra.ur20qcy.mongodb.net/
 JWT_SECRET=PERFINTRA
